# risk_assessment_campx

./: README.md
risk_assessment/: CMakeLists.txt  Cargo.toml  README.md  package.xml  r2r_cargo.cmake
risk_assessment/src/: lib.rs  main.rs
risk_assessment/src/emulators/: emulator.rs  gantry_emulator.rs  gripper_emulator.rs  mod.rs  robot_emulator.rs  scanner_emulator.rs
risk_assessment/src/interfaces/: gantry_client_ticker.rs  robot_client_ticker.rs  scanner_client_ticker.rs
risk_assessment/src/models/: mod.rs
risk_assessment/src/models/bt_test_endre/: model.rs  state.rs
risk_assessment/src/models/minimal/: model.rs  state.rs
risk_assessment/src/ticker/: gantry_client_ticker.rs  gripper_client_ticker.rs  mod.rs  robot_client_ticker.rs  scanner_client_ticker.rs  set_state_server.rs  state_publisher.rs
risk_assessment/src/tickers/: gantry_client_ticker.rs
risk_assessment/src/utils/: env_logger.rs  state_publisher.rs
risk_assessment_msgs/: CMakeLists.txt  package.xml
risk_assessment_msgs/srv/: TriggerGantry copy.srv  TriggerGantry.srv  TriggerRobot.srv
