[package]
name = "risk_assessment"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = false

[profile.colcon]
inherits = "release"

[dependencies]
log = "0.4.21"
rand = "0.8.5"
# ordered-float = {version = "3.4.0", features = ["serde"] }
# serde = {version = "1.0.152", features = ["derive"] }
r2r = "0.9.0"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
micro_sp = {git = "https://github.com/endre90/micro_sp", branch = "master"}
serde_json = "1.0.91"
# proptest = "1.1.0"

[build-dependencies]
# quote = "1.0.23"
# syn = "1.0.107"